# tgrep

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: job.h  job_executor.h  job_queue.h  task.h  task_queue.h
src/: _main.c  job_executor.c  job_queue.c  main.c  task.c  task_queue.c
